<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#105CC5"
    tools:context=".activities.OperationsActivity">

    <include
        android:id="@+id/backgroundLogo"
        layout="@layout/bg_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        android:id="@+id/toolbarContainer"
        layout="@layout/activity_toolbar_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewContainer"/>

    <ScrollView
        android:id="@+id/scrollViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#B3000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/createOpNameTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_op_name_title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/createOpName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/createOpName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/standart_rectangle"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/createOpDateTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpNameTitle" />

            <TextView
                android:id="@+id/createOpDateTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_op_date_title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/createOpDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpName" />

            <EditText
                android:id="@+id/createOpDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/standart_rectangle"
                android:ems="10"
                android:inputType="date"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/createOpTimeTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpDateTitle" />

            <TextView
                android:id="@+id/createOpTimeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_op_time_title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/createOpTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpDate" />

            <EditText
                android:id="@+id/createOpTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/standart_rectangle"
                android:ems="10"
                android:inputType="time"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/createOpFirstClientTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpTimeTitle" />

            <TextView
                android:id="@+id/createOpFirstClientTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_op_client_title_1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/createOpFirstClientName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpTime" />

            <TextView
                android:id="@+id/createOpFirstClientName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/not_chosen"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/pickFirstClientButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpFirstClientTitle" />

            <Button
                android:id="@+id/pickFirstClientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pick_client_button"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/createOpSecondClientTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpFirstClientName" />

            <TextView
                android:id="@+id/createOpSecondClientTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_op_client_title_2"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/createOpSecondClientName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickFirstClientButton" />

            <TextView
                android:id="@+id/createOpSecondClientName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/not_chosen"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/pickSecondClientButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpSecondClientTitle" />

            <Button
                android:id="@+id/pickSecondClientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pick_client_button"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/createOpObjectTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpSecondClientName" />

            <TextView
                android:id="@+id/createOpObjectTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_op_object_title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/createOpObjectAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickSecondClientButton" />

            <TextView
                android:id="@+id/createOpObjectAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/not_chosen"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/pickObjectButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpObjectTitle" />

            <Button
                android:id="@+id/pickObjectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pick_object_button"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/createOpHostTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpObjectAddress" />

            <TextView
                android:id="@+id/createOpHostTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_op_host_title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/createOpHostName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickObjectButton" />

            <TextView
                android:id="@+id/createOpHostName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/not_chosen"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/pickHostButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpHostTitle" />

            <Button
                android:id="@+id/pickHostButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pick_host_button"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/createOpButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createOpHostName" />

            <Button
                android:id="@+id/createOpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:text="@string/create_op_button"
                android:textSize="19sp"
                android:textAllCaps="true"
                android:backgroundTint="@android:color/holo_blue_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickHostButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>